--- a/style.css
+++ b/style.css
@@ -80,3 +80,11 @@ header div a {
  header div a:hover {
      background-color: #8662c7;
  }
+
+ .card {
+   float: left;
+   display: inline-block;
+   width: calc(33% - 10px);
+   margin: 10px 5px;
+   background-color: white;
+ }
