--- a/style.css
+++ b/style.css
@@ -81,17 +81,25 @@ header div a {
      background-color: #8662c7;
  }
 
- .card {
-   float: left;
-   display: inline-block;
-   width: calc(33% - 10px);
-   margin: 10px 5px;
-   background-color: white;
- }
-
- .card div {
-   padding: 20px 5px;
+ main {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+   gap: 10px;
+   padding: 20px;
 }
+
+
+.card {
+   flex: 1 1 calc(33.333% - 20px);
+   margin: 10px 0;
+   background-color: white;
+   padding: 20px;
+   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+   border-radius: 8px;
+}
+
+
 .card img {
    width: 100%;
 }
